--- a/profile.html
+++ b/profile.html
@@ -14,9 +14,9 @@
 <body>
 
     <header> 
-        <h2 class="logo">Totally Real Bank</h1>
+        <h2 class="logo">Profile</h1>
         <nav class="navigation">
-            <a href="">Home</a>
+            <a href="index.html">Home</a>
             <a href="">About</a>
             <a href="">Services</a>
             <a href="">Contact</a>
@@ -102,9 +102,15 @@
               </div>
             </form>
         </div>
+        <div class="profile">
+          <h2>Welcome to your profile</h2>
+          <p id="username">Username: </p>
+          <p id="email">Email: </p>
+          <p id="balance">Balance: </p>
+        </div>
     </div>
     
-    <script type="module" src="script.js"></script>
+    <script src="profile.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
