--- a/profile.html
+++ b/profile.html
@@ -110,7 +110,7 @@
         </div>
     </div>
     
-    <script src="profile.js"></script>
+    <script type="module" src="profile.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
