--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <label><input type = "checkbox"> 
                     Remember me
                 </label>
-                <a href="#">Forgot Password</a>
+                <a href="forgot.html">Forgot Password</a>
               </div>
               <button type="submit" class="btn">Login</button>
               <div class="login-register">
