--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,11 @@
       <h2>Welcome to your profile</h2>
       <p1 id="username">Username: </p1>
       <p2 id="email">Email: </p2>
-      <p3 id="balance">Balance: </p3>
+      <p3 id="bal">Balance: $1000</p3>
+      <form id="email-change-form">
+        <input type="email" id="new-email" placeholder="Enter New Email">
+        <button id="change-email-btn">Change Email</button>
+      </form> 
     </div>
 
     
